

Sat Jan 16 10:29:09 CST 2016
- [+] include/sandix/rwsem.h			[D] Used by tty now. Empty
- [M] include/sandix/tty.h			[D] re-organize tty_struct. new protecting lock and new fields
- [M] drivers/tty/tty_io.c			 >  tty_lock/unlock. alloc_tty_struct() some modifications
- [M] drivers/tty/tty_ldisc.h			 >  Some locking added
- [M] include/sandix/tty_driver.h		[D] new methods added into tty_operations
- [M] drivers/tty/vt/vt.c			 >  write_room, chars_in_buffer, etc. I start to understand why they are here
- [M] drivers/tty/n_tty.c			[D] OPOST processing


Mon Jan 18 11:05:18 CST 2016
- [+] lib/sort.c				[D] a heapsort implementation
- [+] include/sandix/sort.c
- [+] arch/x86/pci/early.c			[D] early dump pci devices
- [+] arch/x86/include/asm/pci-early.c
- [+] arch/x86/kernel/traps.c			[D] traps_init()
- [M] arch/x86/kernel/e820.c			[D] Parse e820 table, print map
- [M] arch/x86/kernel/setup.c			[D] early_arch_setup()
- [M] lib/vsnprintf.c				[D] I reread the code, and change 'qualifiers' to 'modifiers',
-						 >  which might be more proper, since all manuals call this way.


Wed Jan 20 10:21:18 CST 2016
- [+] scripts/tags.sh
- [+] arch/x86/boot/install.sh
- [+] scirpts/gcc-version.sh
- [M] Makefile
- [M] arch/x86/Makefile
- [M] arch/x86/boot/Makefile


Thu Jan 21 11:43:12 CST 2016
- [M] arch/x86/boot/tools/build.c		[D] Two output images, bzImage + bzImgae.iso


Fri Jan 22 16:57:04 CST 2016
- [+] arch/x86/boot/copy.S
- [+] arch/x86/boot/video-mode.c		[D] select video mode when booting
- [+] arch/x86/boot/video-bios.c		 >  many thanks to linux kernel developers!
- [+] arch/x86/boot/video-vga.c
- [+] arch/x86/boot/video-vesa.c
- [M] arch/x86/boot/video.h
- [M] arch/x86/boot/video.c
- [M] arch/x86/boot/main.c			[D] video code modifications
- [M] arch/x86/boot/header.S			[D] heap_end_ptr + CAN_USE_HEAP


Sat Jan 23 21:39:06 CST 2016
- [M] arch/x86/boot/video.c			[D] some updates about video.
- [M] include/sandix/screen_info.h		[D] NOTE: need to modify vgacon.c