@@ -9,13 +9,17 @@
  *	This program is distributed in the hope that it will be useful,
  *	but WITHOUT ANY WARRANTY; without even the implied warranty of
  *	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *	GNU General Public License for more details.
+ *
  *	You should have received a copy of the GNU General Public License along
  *	with this program; if not, write to the Free Software Foundation, Inc.,
  *	51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  */
 
-#ifdef CONFIG_X86_32
-# include <asm/page_32.h>
-#else
-# include <asm/page_64.h>
-#endif
+#ifndef _ASM_X86_PAGE_64_H_
+#define _ASM_X86_PAGE_64_H_
+
+#include <sandix/types.h>
+#include <sandix/const.h>
+
+#endif /* _ASM_X86_PAGE_64_H_ */
