@@ -9,13 +9,22 @@
  *	This program is distributed in the hope that it will be useful,
  *	but WITHOUT ANY WARRANTY; without even the implied warranty of
  *	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *	GNU General Public License for more details.
+ *
  *	You should have received a copy of the GNU General Public License along
  *	with this program; if not, write to the Free Software Foundation, Inc.,
  *	51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  */
 
-#ifdef CONFIG_X86_32
-# include <asm/page_32.h>
-#else
-# include <asm/page_64.h>
-#endif
+/*
+ * Some boot-time memory informations
+ */
+
+#ifndef _SANDIX_BOOTMEM_H_
+#define _SANDIX_BOOTMEM_H_
+
+extern unsigned long max_low_pfn;
+extern unsigned long min_low_pfn;
+extern unsigned long max_pfn;
+
+#endif /* _SANDIX_BOOTMEM_H_ */
